--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,90 @@
 
-.work-sans-normal {
+.work-sans-font {
   font-family: "Work Sans", sans-serif;
   font-optical-sizing: auto;
-  
+  font-weight: 400;
   font-style: normal;
+}
+/* shared items */
+.display-flex{
+    display: flex;
+}
+
+/* dark 02 */
+.text-gray{
+    color: #424242;
+}
+
+/* dark 03 */
+.text-lightgrey{
+    color: #727272;
+}
+
+.bg-light{
+    background-color: rgba(255, 144, 14, 0.1);
+}
+
+.btn-primary{
+    background-color: #FF900E;
+    padding: 8px;
+    color: #FFFFFF;
+    width: 180px;
+    height: 64px;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 8px;
+    border-style: none;
+}
+/* nav styles */
+.navbar{
+    justify-content: space-between;
+}
+.nav-item{
+    list-style: none;
+    margin-right: 30px;
+    
+}
+
+.nav-links{
+   margin-top: 40px;
+   gap: 40px;
+}
+.nav-link{
+    text-decoration: none;
+    font-weight: 500;
+    font-size: 18px;
+   
+    
+}
+
+.brand{
+    margin-left: 150px;
+    font-size: 30px;
+}
+
+.navbar, .banner{
+    max-width: 1470px;
+    margin: 0 auto;
+}
+
+.banner{
+   text-align: center;
+}
+.banner-heading{
+    font-size: 50px;
+    margin-top: 180px;
+}
+.banner-description{
+    font-size: 16px;
+    color: #727272;
+    margin-bottom: 35px;
+    
+}
+
+.banner-img{
+    width: 1250px;
+    height: 600px;
+    margin-top: 51px;
+    border-radius: 8px;
+    margin-bottom: 45px;
 }
