--- a/css/style.css
+++ b/css/style.css
@@ -72,7 +72,7 @@
 }
 .banner-heading{
     font-size: 50px;
-    margin-top: 180px;
+    margin-top: 160px;
 }
 .banner-description{
     font-size: 16px;
@@ -82,9 +82,16 @@
 }
 
 .banner-img{
-    width: 1250px;
-    height: 600px;
+    width: 85%;
     margin-top: 51px;
     border-radius: 8px;
     margin-bottom: 45px;
+}
+
+/* responsive media query */
+@media screen and (max-width:576px) {
+    .navbar, .nav-links{
+        flex-direction: column;
+    }
+    
 }
