--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,23 @@
     color: #FFFFFF;
     width: 180px;
     height: 64px;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: 600;
     border-radius: 8px;
     border-style: none;
+}
+
+main{
+    max-width: 1470px;
+    margin: 0 auto;
+}
+
+main,section{
+    margin-top: 100px;
+}
+.section-title{
+    font-size: 2.55rem;
+    font-weight: 700;
 }
 /* nav styles */
 .navbar{
@@ -58,7 +71,7 @@
 }
 
 .brand{
-    margin-left: 150px;
+    margin-left: 130px;
     font-size: 30px;
 }
 
@@ -87,11 +100,65 @@
     border-radius: 8px;
     margin-bottom: 45px;
 }
+/* teams and feature related styles */
+.teams{
+    justify-content: center;
+    gap: 50px;
+}
+.team-img-container{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 18px;
+    margin-left: 110px;
+   
+}
 
+.team-img{
+    width: 250px;
+    height: 250px;
+}
+.our-features{
+    margin-top: 95px;
+}
+.feature-title{
+    font-size: 2.55rem;
+}
+.feature-description{
+    margin-bottom: 33px;
+    font-size: 1.14rem;
+    color: #727272;
+}
+.quick-list{
+    color: #727272;
+    font-weight: 500;
+}
+.text-primary{
+    color: #FF900E;
+}
 /* responsive media query */
 @media screen and (max-width:576px) {
-    .navbar, .nav-links{
+    .navbar, .nav-links, .teams{
         flex-direction: column;
     }
+    .team-img-container{
+        grid-template-columns: repeat(1, 1fr);
+        margin-left: 20px;
+        
+    }
+    .our-features{
+        margin-left: 20px;
+        margin-top: 5px;
+        
+    }
+}
+
+@media screen and (min-width:576px) and (max-width:992px) {
+    .teams{
+        flex-direction: column;
+    }
+    .our-features{
+        margin-left: 80px;
+    }
+    
     
 }
