--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,9 @@
 .text-lightgrey{
     color: #727272;
 }
+.text-primary{
+    color: #FF900E;
+}
 
 .bg-light{
     background-color: rgba(255, 144, 14, 0.1);
@@ -103,13 +106,13 @@ main,section{
 /* teams and feature related styles */
 .teams{
     justify-content: center;
-    gap: 50px;
+    gap: 60px;
 }
 .team-img-container{
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     gap: 18px;
-    margin-left: 110px;
+    
    
 }
 
@@ -132,21 +135,50 @@ main,section{
     color: #727272;
     font-weight: 500;
 }
-.text-primary{
-    color: #FF900E;
+/* some facts related styles */
+.fact-container{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    
 }
+.fact-card{
+    border: 1px solid #FF900E;
+    width: 240px;
+    height: 240px;
+    border-radius: 8px;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+.fact-number{
+    font-size: 2.55rem;
+    font-weight: 600;
+    margin-top: 5px;
+    margin-bottom: 10px;
+}
+.fact-name{
+    font-size: 1.15rem;
+    font-weight: 600;
+    margin-top: 8px;
+}
+.fact-description{
+    max-width: 540px;
+}
+
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-img-container{
+    .team-img-container, .fact-container{
         grid-template-columns: repeat(1, 1fr);
-        margin-left: 20px;
+        justify-items: center;
+        gap: 24px;
         
     }
+    
     .our-features{
-        margin-left: 20px;
+        margin-left: 10px;
         margin-top: 5px;
         
     }
@@ -159,6 +191,8 @@ main,section{
     .our-features{
         margin-left: 80px;
     }
-    
-    
+    .fact-container{
+        grid-template-columns: repeat(2, 1fr);
+        gap: 12px;
+    }
 }
