--- a/css/style.css
+++ b/css/style.css
@@ -164,13 +164,26 @@ main,section{
 .fact-description{
     max-width: 540px;
 }
+/* sponsor related styles */
+.sponsor-info{
+    max-width: 540px;
+    margin: 50px auto;
+    text-align: center;
+}
+.sponsor-companies{
+    display: grid;
+    grid-template-columns: repeat(5, 1fr);
+}
+.sponsor-companies img{
+    filter: grayscale(100%);
+}
 
 /* responsive media query */
 @media screen and (max-width:576px) {
     .navbar, .nav-links, .teams{
         flex-direction: column;
     }
-    .team-img-container, .fact-container{
+    .team-img-container, .fact-container, .sponsor-companies{
         grid-template-columns: repeat(1, 1fr);
         justify-items: center;
         gap: 24px;
@@ -191,8 +204,9 @@ main,section{
     .our-features{
         margin-left: 80px;
     }
-    .fact-container{
+    
+    .fact-container, .sponsor-companies{
         grid-template-columns: repeat(2, 1fr);
-        gap: 12px;
+        gap: 50px;
     }
 }
