--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,32 @@ main,section{
     color: #727272;
     font-weight: 500;
 }
+
+/* feature section related styles */
+#feature-section-title{
+    border-left: 5px solid #FF900E;
+    padding-left: 20px;
+}
+
+.features{
+    gap: 120px;
+}
+.feature-card{
+    
+    padding: 30px;
+    box-shadow: 0 4px 30px 0 rgba(0, 0, 0, 0.06);
+    margin-bottom: 20px;
+    border-radius: 8px;
+}
+
+ .feature-title{
+    font-weight: 600;
+    font-size: 1.25rem;
+    margin-top: 0;
+    margin-bottom: 0;
+    
+    
+}
 /* some facts related styles */
 .fact-container{
     display: grid;
@@ -173,6 +199,8 @@ main,section{
 .sponsor-companies{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
+    margin: 50px;
+    padding: 5px;
 }
 .sponsor-companies img{
     filter: grayscale(100%);
